--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  json_annotation: ^4.6.0
+  json_annotation:
   uuid: ^3.0.6
 
 dev_dependencies:
@@ -19,6 +19,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   intl: ^0.17.0
-  json_serializable: ^6.3.2
+  json_serializable:
 
 flutter:
